change on index from the anchors link

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<h1>Hello World!</h1>
-
 <h2>CatPhotoApp</h2>
+
+<!-- header h1 and h2 -->
+
 <main>
+
+  <a href="#footer" >Jump to bottom</a>
   
-  <a href="http://freecatphotoapp.com" target="_blank">cat photos</a>
-  
+  <!-- Links content outside your page -->
+  <!-- Anchor elements can also be used to create internal links to jump to different sections within a webpage. -->
+
   <img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
+
+  <!-- Image linked. You should always inser the alt attribute, so it can be used for screen readers to improve accessibility. --> 
   
   <p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff. Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched. Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
   <p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched. Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff. Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
@@ -14,4 +20,6 @@
   
 </main>
   
-<footer>Copyright Cat Photo App</footer>
+<footer id="footer">Copyright Cat Photo App</footer>
+
+<!-- Footer of your page -->
