--- a/lists&webForm.html
+++ b/lists&webForm.html
@@ -5,7 +5,8 @@
   <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
   
 <!-- unordered lists, or bullet point style lists. -->
- 
+
+  <div>
 <p>Things cats love:</p> 
 <ul>
   <li>Milk;</li>
@@ -21,6 +22,7 @@
     <li>Dogs;</li>
     <li>Belly rub.</li>
   </ol>
+  </div>
   
   <!-- Text fields: Input elements are a convenient way to get input from your user. Note that they are self-closing. -->
   <!-- Placeholder text is what is displayed inside your input element before your user has inputted anything. -->
@@ -59,6 +61,10 @@ considered best practice to set a for attribute on the label element, with a
 value that matches the value of the id attribute of the input element.-->
   
   <!-- set of checkboxes: are a type of input
+You can set a checkbox or radio button to be checked by default, just add the word "checked" to the inside of an input element
+-->
+  
+  <!-- The div element, division element, is a general purpose container for other elements.
 -->
   
 </main>
